# tee-monorepo

./: .gitignore  .gitmodules  .solhint.json  Cargo.toml  CommonChainContract.json  CommonChainGateway.json  CommonChainJobs.json  Dockerfile  GatewayJobs.json  Gateways.json  README.md  Relay.json  RelaySubscriptions.json  RequestChainContract.json  SecretManager.json  SecretStore.json  address.json  build-amd64.sh  build-arm64.sh  enclave_public_key  enclave_secret_key  flake.nix  hardhat.config.ts  oyster_secret_store_config.json  oyster_serverless_gateway_config.json  package-lock.json  package.json  sample_config.json  setup.sh  supervisord.conf  tsconfig.json
.openzeppelin/: unknown-421614.json
assets/: logs.html
attestation/verifier/: Cargo.toml  README.md
attestation/verifier-risczero/host/: Cargo.toml
attestation/verifier-risczero/host/src/: main.rs
attestation/verifier-risczero/methods/guest/: Cargo.toml
attestation/verifier-risczero/methods/guest/src/: main.rs
attestation/verifier/src/: cli_attestation_verifier.rs  handler.rs  main.rs
cli/oyster-cvm/: Cargo.toml  README.md  Readme.md  default.nix
cli/oyster-cvm/src/: main.rs  types.rs
cli/oyster-cvm/src/abis/: chainlink_abi.json  oyster_market_abi.json  token_abi.json
cli/oyster-cvm/src/args/: init_params.rs  mod.rs  pcr.rs  wallet.rs
cli/oyster-cvm/src/artifacts/: KmsVerifiable.json
cli/oyster-cvm/src/commands/: bandwidth.rs  build.rs  deploy.rs  deposit.rs  derive.rs  doctor.rs  image_id.rs  kms_contract.rs  list.rs  log.rs  mod.rs  simulate.rs  stop.rs  update.rs  upload.rs  verify.rs  withdraw.rs
cli/oyster-cvm/src/configs/: global.rs
cli/oyster-cvm/src/utils/: bandwidth.rs  mod.rs  provider.rs  usdc.rs
cli/oyster-serverless/: .gitignore  Cargo.toml  README.md
cli/oyster-serverless/src/: main.rs  types.rs
cli/oyster-serverless/src/abis/: OysterServerlessCodeContract.json  Relay.json  RelaySubscriptions.json
cli/oyster-serverless/src/args/: wallet.rs
cli/oyster-serverless/src/commands/: deploy.rs  dev.rs  doctor.rs  job.rs  mod.rs  new_project.rs  subscription.rs
cli/oyster-serverless/src/commands/job/: cancel.rs  create.rs  fetch.rs  list.rs  mod.rs  types.rs
cli/oyster-serverless/src/commands/subscription/: create.rs  fetch.rs  list.rs  mod.rs  refund.rs  terminate.rs  types.rs  update.rs  utils.rs
cli/oyster-serverless/src/configs/: global.rs
cli/oyster-serverless/src/utils/: conversion.rs  mod.rs  provider.rs  usdc.rs
cli/oyster-serverless/workerd-docker-setup/: Dockerfile  config.capnp
contracts/: AttestationAuther.sol  AttestationAutherSample.sol  AttestationAutherSampleUpgradeable.sol  AttestationAutherUpgradeable.sol  AttestationVerifier.sol  MarketV1.sol
examples/: basic_transaction.rs
initialization/init-params-decoder/: Cargo.toml  LICENSE.txt  README.md
initialization/init-params-manager/: Cargo.toml  README.md
initialization/init-params-manager/src/: decoder.rs  encoder-contract.rs  encoder.rs  main.rs
initialization/pcr-utils/: Cargo.toml  README.md
initialization/pcr-utils/src/: extender.rs  locker.rs
kms/creator/: Cargo.toml  README.md  default.nix
kms/creator/src/: main.rs
kms/derive-server/: Cargo.toml  README.md
kms/derive-server/src/: derive.rs  derive_ed25519.rs  derive_secp256k1.rs  derive_x25519.rs  fetch.rs  main.rs  scallop.rs
kms/derive-utils/: Cargo.toml  README.md
kms/derive-utils/src/: lib.rs
kms/root-server/: Cargo.toml  README.md  default.nix
kms/root-server-contract/: Cargo.toml  README.md
kms/root-server-contract/src/: derive.rs  derive_public.rs  main.rs  scallop.rs  taco.rs
kms/root-server/src/: derive.rs  derive_ed25519_address_solana.rs  derive_ed25519_public.rs  derive_public.rs  derive_secp256k1_address_ethereum.rs  derive_secp256k1_public.rs  derive_x25519_public.rs  export.rs  generate.rs  import.rs  main.rs  scallop.rs  taco.rs
operator/control-plane/: Cargo.toml  README.md
operator/control-plane/src/: aws.rs  enclaver.rs  main.rs  market.rs  test.rs
operator/setup-aws/: .gitignore  Cargo.toml  README.md  default.nix  package-lock.json  rates.json
operator/setup-aws/cmd/tuna/: main.go  oyster-init-server.conf
operator/setup-aws/instances/: modify_state_instance.go
operator/setup-aws/src/: compute_rates.rs
scripts/: deploySecretStore.ts  relayRequest.ts  relayTransaction.ts
sdks/rs/: Cargo.toml
sdks/rs/examples/: axum.rs  hyper.rs  scallop.rs
sdks/rs/src/: attestation.rs  axum.rs  lib.rs  main.rs  scallop.rs
serverless/executor/: .gitignore  Cargo.toml  CodeContract.json  README.md  oyster_serverless_executor_config.json
serverless/executor/src/: cgroups.rs  cgroups_retriever.rs  constant.rs  event_handler.rs  job_handler.rs  lib.rs  main.rs  model.rs  node_handler.rs  tests.rs  timeout_handler.rs  utils.rs  workerd.rs
serverless/gateway/: .gitignore  Cargo.toml  GatewayJobs.json  README.md  oyster_serverless_gateway_config.json
serverless/gateway/src/: api_impl.rs  chain_util.rs  common_chain_gateway_state_service.rs  common_chain_interaction.rs  constant.rs  job_subscription_management.rs  main.rs  model.rs  test_util.rs
serverless/gateway/src/contract_abi/: mod.rs
serverless/http-on-vsock-client/: Cargo.toml  README.md
serverless/http-on-vsock-client/src/: exec_vsock_client.rs  gw_vsock_client.rs  lib.rs  main.rs  vsock_client.rs
serverless/secret-store/: Cargo.toml  Dockerfile  LICENSE.txt  README.md  SecretManager.json  default.nix  oyster_secret_store_config.json  setup.sh
serverless/secret-store/src/: constants.rs  events.rs  main.rs  model.rs  scheduler.rs  server.rs
serverless/secret-store/src/user_utility/: sign_secret.rs
serverless/transaction-manager/: Cargo.toml  README.md
serverless/transaction-manager/examples/: basic_transaction.rs  update_signer.rs
serverless/transaction-manager/src/: errors.rs  models.rs  transaction.rs  utils.rs
src/: api_impl.rs  args.rs  chain_util.rs  common_chain_gateway_state_service.rs  common_chain_interaction.rs  common_chain_util.rs  config.rs  constant.rs  constants.rs  contract_abi.rs  enclave_monitor.rs  (+21 more)
(+216 files in other folders)
