[package]
name = "serverless-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
alloy = { version = "0.6.2", features = ["full"] }
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
config = "0.14.0"
env_logger = "0.11.3"
futures-core = "0.3.30"
futures-util = "0.3.31"
lazy_static = "1.4.0"
log = "0.4.21"
multi-block-txns = { git = "https://github.com/marlinprotocol/multi-block-txns", branch = "arnav/init" }
rand = { version = "0.8.5", features = ["std_rng"] }
serde = "1.0.159"
serde_derive = "1.0.193"
serde_json = "1.0.88"
thiserror = "1.0.63"
tokio = { version = "1.36.0", features = ["full"] }
