[package]
name = "multi-block-txns"
version = "0.1.0"
authors = ["arnav-deep <arnavd4@gmail.com>"]
edition = "2021"

[[example]]
name = "basic_transaction"
path = "examples/basic_transaction.rs"

[dependencies]
alloy = { version = "0.6.4", features = ["full"] }
anyhow = "1.0.89"
hex = "0.4.3"
reqwest = "0.12.8"
serde_json = "1.0.128"
thiserror = "1.0.65"
tokio = { version = "^1.40.0", features = ["full"] }
tokio-retry = "0.3.0"
uuid = { version = "1.11.0", features = ["v4"] }
