[package]
name = "oyster-attestation-verifier"
version = "2.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[[bin]]
name = "oyster-attestation-verifier"
path = "src/main.rs"

[[bin]]
name = "oyster-verify-attestation"
path = "src/cli_attestation_verifier.rs"

[dependencies]
alloy = { version = "0.11.0", features = ["full"] }
anyhow = "1.0.93"
axum = "0.8.1"
clap = { version = "4.5.21", features = ["derive"] }
# ethers = "2.0.14"
hex = "0.4.3"
hex-literal = "0.4.1"
oyster-sdk = "0.15.1"
secp256k1 = { version = "0.30.0", features = ["recovery"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.43.0", features = ["full"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[dev-dependencies]
http-body-util = "0.1.2"
serde_json = "1.0.138"
tower = "0.5.2"
