[package]
name = "oyster-attestation-verifier"
version = "2.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[[bin]]
name = "oyster-attestation-verifier"
path = "src/main.rs"

[dependencies]
alloy = { version = "0.14.0", features = ["full"] }
anyhow = "1.0.98"
axum = "0.8.3"
clap = { version = "4.5.37", features = ["derive"] }
hex = "0.4.3"
oyster-sdk = "0.16.2"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[dev-dependencies]
http-body-util = "0.1.3"
serde_json = "1.0.140"
tower = "0.5.2"
