[package]
name = "oyster-cvm"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.2.7", features = ["derive"] }
anyhow = "1.0.72"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
oyster-sdk = "0.3.0"
