[package]
name = "oyster-cvm"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.2.7", features = ["derive"] }
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.72"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
alloy = {version = "0.9.1", features = ["full"]}
oyster-sdk = "0.14.2"
hex = "0.4.3"
futures-util = "0.3"
