[package]
name = "oyster-cvm"
version = "4.0.0"
edition = "2024"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.2.7", features = ["derive"] }
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0.72"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
alloy = {version = "0.9.1", features = ["full"]}
oyster-sdk = "0.17.1"
hex = "0.4.3"
futures-util = "0.3"
libsodium-sys-stable = "1.22.2"
base64 = "0.22.1"
ureq = "3.0.6"
prettytable-rs = "0.10"
chrono = "0.4.40"
lazy_static = "1.5.0"
k256 = "0.13.4"
