[package]
name = "oyster-serverless"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.2.7", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.72"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
inquire = "0.6" 
reqwest = { version = "0.11", features = ["json"] }
portpicker = "0.1.1" 
ctrlc = "3.4"
