[package]
name = "oyster-serverless"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.9.1", features = ["full"] }
anyhow = "1.0.72"
clap = { version = "4.2.7", features = ["derive"] }
ctrlc = "3.4"
hex = "0.4.3"
inquire = "0.6"
minify-js = "0.5.6"
openssl = { version = "0.10", features = ["vendored"] }
portpicker = "0.1.1"
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
