[package]
name = "init-params-decoder"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
clap = { version = "4.5.27", features = ["derive"] }
hex = "0.4.3"
libsodium-sys-stable = { version = "1.22.2", features = ["minimal"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ureq = "3.0.3"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
