[package]
name = "init-params-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "init-params-decoder"
path = "src/decoder.rs"

[[bin]]
name = "init-params-encoder"
path = "src/encoder.rs"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
clap = { version = "4.5.27", features = ["derive"] }
libsodium-sys-stable = { version = "1.22.2", features = ["minimal"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ureq = "3.0.3"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
