[package]
name = "pcr-utils"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "pcr-extender"
path = "src/extender.rs"

[[bin]]
name = "pcr-locker"
path = "src/locker.rs"

[dependencies]
anyhow = "1.0.98"
aws-nitro-enclaves-nsm-api = "0.4.0"
clap = { version = "4.5.37", features = ["derive"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
