[package]
name = "kms-creator"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
alloy = { version = "0.9.2", features = ["signer-local"] }
anyhow = "1.0.95"
axum = "0.8.1"
bincode = "1.3.3"
clap = { version = "4.5.26", features = ["derive"] }
kms-derive-utils = { version = "0.1.0", path = "../derive-utils" }
nucypher-core = "0.14.0"
rand = "0.8.5"
tokio = { version = "1.43.0", features = ["full"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
