[package]
name = "kms-creator"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
alloy = { version = "0.13.0", features = ["signer-local"] }
anyhow = "1.0.97"
axum = "0.8.3"
bincode = "2.0.1"
clap = { version = "4.5.35", features = ["derive"] }
kms-derive-utils = { version = "0.1.0", path = "../derive-utils" }
nucypher-core = "0.14.0"
rand = "0.9.0"
tokio = { version = "1.44.1", features = ["full"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
