[package]
name = "kms-derive-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
clap = { version = "4.5.27", features = ["derive"] }
hex = "0.4.3"
hmac = "0.12.1"
oyster-sdk = "0.14.3"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
