[package]
name = "kms-derive-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
base58 = "0.2.0"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
hmac = "0.12.1"
k256 = "0.13.4"
ruint = { version = "1.12.4", default-features = false }
sha2 = "0.10.8"
sha3 = "0.10.8"
x25519-dalek = "2.0.1"

[dev-dependencies]
hex-literal = "0.4.1"
