[package]
name = "kms-root-server-contract"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
alloy = { version = "0.9.2", features = ["full"] }
anyhow = "1.0.95"
axum = "0.8.1"
base64 = "0.22.1"
bincode = "1.3.3"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
hex = "0.4.3"
kms-derive-utils = { version = "0.1.0", path = "../derive-utils" }
nucypher-core = "0.14.0"
oyster-sdk = { version = "0.15.0", features = ["axum"] }
rand = "0.8.5"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
