[package]
name = "kms-root-server-contract"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
alloy = { version = "0.13.0", features = ["full"] }
anyhow = "1.0.97"
axum = "0.8.3"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.40"
clap = { version = "4.5.34", features = ["derive"] }
hex = "0.4.3"
kms-derive-utils = { version = "0.1.0", path = "../derive-utils" }
nucypher-core = "0.14.0"
oyster-sdk = { version = "0.15.3", features = ["axum"] }
rand = "0.9.0"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["timeout", "limit"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
