[package]
name = "setup-aws"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "compute_rates"
path = "src/compute_rates.rs"

[dependencies]
anyhow = "1.0.95"
aws-config = "1.5.13"
aws-sdk-ec2 = "1.101.0"
clap = { version = "4.5.26", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
