[package]
name = "setup-aws"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[[bin]]
name = "compute_rates"
path = "src/compute_rates.rs"

[dependencies]
anyhow = "1.0.95"
aws-config = "1.5.13"
aws-sdk-ec2 = "1.101.0"
aws-sdk-pricing = "1.55.0"
clap = { version = "4.5.26", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
