[package]
name = "oyster-serverless-executor"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "serverless"
path = "src/lib.rs"

[[bin]]
name = "oyster-serverless-executor"
path = "src/main.rs"

[[bin]]
name = "cgroups-retriever"
path = "src/cgroups_retriever.rs"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
bytes = "1.9.0"
clap = { version = "4.4.7", features = ["derive"] }
config = "0.14.0"
data-encoding = "2.5.0"
ethers = { version = "2.0.14", features = ["ws", "rustls"] }
hex = "0.4.3"
http-on-vsock-server = { git = "https://github.com/marlinprotocol/oyster-monorepo.git", branch = "master" }
hyper = { version = "0.14.28", features = ["full"] }
k256 = { version = "0.13.2", features = ["ecdsa", "ecdsa-core"] }
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8.5"
reqwest = { version = "0.12.2", features = ["json"] }
scopeguard = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.50"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-retry = "0.3"
tokio-stream = "0.1"
tokio-vsock = "0.4.0"

[dev-dependencies]
axum-test = "13.4.1"
tempfile = "3.6"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
