[package]
name = "oyster-secret-store"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[[bin]]
name = "oyster-secret-store"
path = "src/main.rs"

[[bin]]
name = "oyster-secret-user-utility"
path = "src/user_utility/sign_secret.rs"

[dependencies]
actix-web = "4.9.0"
alloy = { version = "0.6.2", features = ["full"] }
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
config = "0.14.0"
ecies = "0.2.7"
once_cell = "1.17"
multi-block-txns = { version = "0.1.0", path = "../transaction-manager" }
openssl = { version = "0.10", features = ["vendored"] }
scopeguard = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-retry = "0.3"
tokio-stream = "0.1"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
