[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
p384 = { version = "0.13.0", features = ["ecdsa-core"] }
risc0-zkvm = { version = "1.2.1", default-features = false, features = ['std'] }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
x509-cert = "0.2.5"

[dev-dependencies]
hex = "0.4.3"
